--- a/wkQuiz/ihm-quizz/src/application/vue/EditerCategories.fxml
+++ b/wkQuiz/ihm-quizz/src/application/vue/EditerCategories.fxml
@@ -1,14 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.scene.Group?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -17,7 +10,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1450.0" style="-fx-background-color: #282C34;" stylesheets="@css/mainStyle.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controleurs.ControlleurEditerCategories">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1450.0" style="-fx-background-color: #282C34;" stylesheets="@css/mainStyle.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controleurs.ControlleurEditerCategories">
    <children>
       <Group layoutX="32.0" layoutY="20.0" onMouseClicked="#retour">
          <children>
@@ -38,13 +31,13 @@
             <Font name="Open Sans Regular" size="40.0" />
          </font>
       </Text>
-      <TableView fx:id="table" layoutX="80.0" layoutY="280.0" prefHeight="471.0" prefWidth="1290.0"/>
+      <TableView fx:id="table" layoutX="80.0" layoutY="280.0" prefHeight="471.0" prefWidth="1290.0" />
       <Text fill="WHITE" layoutX="84.0" layoutY="196.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nom de la Catégorie :">
          <font>
             <Font name="Open Sans Regular" size="24.0" />
          </font>
       </Text>
-      <TextField layoutX="83.0" layoutY="206.0" prefHeight="52.0" prefWidth="445.0" promptText="Nom de la Catégorie" style="-fx-background-radius: 20px;">
+      <TextField fx:id="barreRecherche" layoutX="83.0" layoutY="206.0" onKeyReleased="#filtrer" prefHeight="52.0" prefWidth="445.0" promptText="Nom de la Catégorie" style="-fx-background-radius: 20px;">
          <font>
             <Font size="20.0" />
          </font>
