--- a/wkQuiz/ihm-quizz/src/application/vue/ChoixEnvoie.fxml
+++ b/wkQuiz/ihm-quizz/src/application/vue/ChoixEnvoie.fxml
@@ -9,7 +9,6 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" style="-fx-background-color: #282C34;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Group layoutX="30.0" layoutY="20.0">
@@ -31,22 +30,49 @@
             <Font size="40.0" />
          </font>
       </Label>
-      <Button layoutX="672.0" layoutY="384.0" mnemonicParsing="false" text="Button">
-         <graphic>
-            <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
-         </graphic>
-      </Button>
-      <Button layoutX="618.0" layoutY="158.0" mnemonicParsing="false" text="Button">
-         <graphic>
-            <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
-         </graphic>
-      </Button>
-      <Button layoutX="321.0" layoutY="336.0" mnemonicParsing="false" text="Button">
-         <graphic>
-            <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
-         </graphic>
-      </Button>
-      <Separator orientation="VERTICAL" prefHeight="200.0" />
-      <Separator orientation="VERTICAL" prefHeight="200.0" />
+      <Separator layoutX="629.0" layoutY="245.0" orientation="VERTICAL" prefHeight="210.0" prefWidth="85.0" />
+      <Separator layoutX="298.0" layoutY="243.0" orientation="VERTICAL" prefHeight="210.0" prefWidth="75.0" />
+      <Group layoutX="30.0" layoutY="245.0">
+         <children>
+            <Button mnemonicParsing="false" prefHeight="210.0" prefWidth="285.0" style="-fx-background-color: #2F76FF; -fx-background-radius: 60;" text="Envoyer les Questions " textAlignment="CENTER" textFill="WHITE" wrapText="true">
+               <font>
+                  <Font size="28.0" />
+               </font>
+            </Button>
+            <ImageView fitHeight="60.0" fitWidth="60.0" layoutX="111.0" layoutY="146.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@images/IconeUpload.png" />
+               </image>
+            </ImageView>
+         </children>
+      </Group>
+      <Group layoutX="700.0" layoutY="245.0">
+         <children>
+            <Button mnemonicParsing="false" prefHeight="210.0" prefWidth="285.0" style="-fx-background-color: #2F76FF; -fx-background-radius: 60;" text="Choisir les question par catégorie " textAlignment="CENTER" textFill="WHITE" wrapText="true">
+               <font>
+                  <Font size="28.0" />
+               </font>
+            </Button>
+            <ImageView fitHeight="60.0" fitWidth="60.0" layoutX="113.0" layoutY="146.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@images/IconeUpload.png" />
+               </image>
+            </ImageView>
+         </children>
+      </Group>
+      <Group layoutX="375.0" layoutY="245.0">
+         <children>
+            <Button mnemonicParsing="false" prefHeight="210.0" prefWidth="270.0" style="-fx-background-color: #2F76FF; -fx-background-radius: 60;" text="Sélectionné les question a l'unité" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+               <font>
+                  <Font size="28.0" />
+               </font>
+            </Button>
+            <ImageView fitHeight="60.0" fitWidth="60.0" layoutX="103.0" layoutY="147.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@images/IconeUpload.png" />
+               </image>
+            </ImageView>
+         </children>
+      </Group>
    </children>
 </Pane>
