--- a/wkQuiz/ihm-quizz/src/application/vue/ChoixEnvoie.fxml
+++ b/wkQuiz/ihm-quizz/src/application/vue/ChoixEnvoie.fxml
@@ -30,8 +30,6 @@
             <Font size="40.0" />
          </font>
       </Label>
-      <Separator layoutX="629.0" layoutY="245.0" orientation="VERTICAL" prefHeight="210.0" prefWidth="85.0" />
-      <Separator layoutX="298.0" layoutY="243.0" orientation="VERTICAL" prefHeight="210.0" prefWidth="75.0" />
       <Group layoutX="30.0" layoutY="245.0">
          <children>
             <Button mnemonicParsing="false" prefHeight="210.0" prefWidth="285.0" style="-fx-background-color: #2F76FF; -fx-background-radius: 60;" text="Envoyer les Questions " textAlignment="CENTER" textFill="WHITE" wrapText="true">
@@ -46,6 +44,7 @@
             </ImageView>
          </children>
       </Group>
+      <Separator layoutX="629.0" layoutY="245.0" orientation="VERTICAL" prefHeight="210.0" prefWidth="85.0" />
       <Group layoutX="700.0" layoutY="245.0">
          <children>
             <Button mnemonicParsing="false" prefHeight="210.0" prefWidth="285.0" style="-fx-background-color: #2F76FF; -fx-background-radius: 60;" text="Choisir les question par catégorie " textAlignment="CENTER" textFill="WHITE" wrapText="true">
@@ -60,9 +59,10 @@
             </ImageView>
          </children>
       </Group>
+      <Separator layoutX="298.0" layoutY="243.0" orientation="VERTICAL" prefHeight="210.0" prefWidth="75.0" />
       <Group layoutX="375.0" layoutY="245.0">
          <children>
-            <Button mnemonicParsing="false" prefHeight="210.0" prefWidth="270.0" style="-fx-background-color: #2F76FF; -fx-background-radius: 60;" text="Sélectionné les question a l'unité" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+            <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="210.0" prefWidth="270.0" style="-fx-background-color: #2F76FF; -fx-background-radius: 60;" text="Sélectionné les question a l'unité" textAlignment="CENTER" textFill="WHITE" wrapText="true">
                <font>
                   <Font size="28.0" />
                </font>
