--- a/wkQuiz/ihm-quizz/src/application/vue/EnvoieQuestion.fxml
+++ b/wkQuiz/ihm-quizz/src/application/vue/EnvoieQuestion.fxml
@@ -3,16 +3,16 @@
 <?import javafx.scene.Group?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" style="-fx-background-color: #282C34;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" style="-fx-background-color: #282C34;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controleurs.reseau.ControleurEnvoieQuestion">
    <children>
-      <Group layoutX="30.0" layoutY="20.0">
+      <Group layoutX="30.0" layoutY="20.0" onMouseClicked="#retour">
          <children>
             <ImageView fitHeight="96.0" fitWidth="96.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -36,7 +36,7 @@
             <Font size="32.0" />
          </font>
       </Label>
-      <Text fill="WHITE" layoutX="470.0" layoutY="256.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
+      <Text fx:id="txtPort" fill="WHITE" layoutX="470.0" layoutY="256.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
          <font>
             <Font size="32.0" />
          </font>
@@ -46,12 +46,7 @@
             <Font size="32.0" />
          </font>
       </Label>
-      <Text fill="WHITE" layoutX="440.0" layoutY="336.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
-         <font>
-            <Font size="32.0" />
-         </font>
-      </Text>
-      <Button layoutX="349.0" layoutY="469.0" mnemonicParsing="false" prefHeight="86.0" prefWidth="300.0" style="-fx-background-color: #2F76FF; -fx-background-radius: 60;" text="Annuler" textFill="WHITE">
+      <Button layoutX="349.0" layoutY="469.0" mnemonicParsing="false" onAction="#annuler" prefHeight="86.0" prefWidth="300.0" style="-fx-background-color: #2F76FF; -fx-background-radius: 60;" text="Annuler" textFill="WHITE">
          <graphic>
             <ImageView fitHeight="64.0" fitWidth="64.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -63,5 +58,10 @@
             <Font size="32.0" />
          </font>
       </Button>
+      <TextField fx:id="txtIP" editable="false" layoutX="444.0" layoutY="289.0" prefHeight="69.0" prefWidth="187.0">
+         <font>
+            <Font size="32.0" />
+         </font>
+      </TextField>
    </children>
 </Pane>
