--- a/wkQuiz/ihm-quizz/src/application/vue/EnvoieQuestion.fxml
+++ b/wkQuiz/ihm-quizz/src/application/vue/EnvoieQuestion.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
@@ -46,19 +47,12 @@
             <Font size="32.0" />
          </font>
       </Label>
-      <Button layoutX="138.0" layoutY="470.0" mnemonicParsing="false" onAction="#annuler" prefHeight="86.0" prefWidth="300.0" style="-fx-background-color: #2F76FF; -fx-background-radius: 60;" text="Annuler" textFill="WHITE">
-         <graphic>
-            <ImageView fitHeight="64.0" fitWidth="64.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@images/IconeAnnuler.png" />
-               </image>
-            </ImageView>
-         </graphic>
+      <Button layoutX="147.0" layoutY="470.0" mnemonicParsing="false" onAction="#envoyer" prefHeight="86.0" prefWidth="268.0" style="-fx-background-color: #2F76FF; -fx-background-radius: 60;" text="Envoyer" textFill="WHITE">
          <font>
             <Font size="32.0" />
          </font>
       </Button>
-      <TextField fx:id="txtIP" editable="false" layoutX="444.0" layoutY="289.0" prefHeight="69.0" prefWidth="268.0">
+      <TextField fx:id="txtIP" editable="false" layoutX="444.0" layoutY="289.0" prefHeight="69.0" prefWidth="268.0" style="-fx-background-radius: 32px;">
          <font>
             <Font size="32.0" />
          </font>
@@ -68,5 +62,14 @@
             <Font size="32.0" />
          </font>
       </Button>
+      <HBox alignment="CENTER" layoutX="-2.0" layoutY="358.0" prefHeight="100.0" prefWidth="1000.0">
+         <children>
+            <Text fx:id="information" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Info">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Text>
+         </children>
+      </HBox>
    </children>
 </Pane>
