--- a/wkQuiz/ihm-quizz/src/application/vue/ChoixEnvoie.fxml
+++ b/wkQuiz/ihm-quizz/src/application/vue/ChoixEnvoie.fxml
@@ -9,9 +9,9 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" style="-fx-background-color: #282C34;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" style="-fx-background-color: #282C34;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controleurs.reseau.ControleurChoixEnvoie">
    <children>
-      <Group layoutX="30.0" layoutY="20.0">
+      <Group layoutX="30.0" layoutY="20.0" onMouseClicked="#retour">
          <children>
             <ImageView fitHeight="96.0" fitWidth="96.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -30,9 +30,9 @@
             <Font size="40.0" />
          </font>
       </Label>
-      <Group layoutX="30.0" layoutY="245.0">
+      <Group layoutX="30.0" layoutY="245.0" onMouseClicked="#envoieTous">
          <children>
-            <Button mnemonicParsing="false" prefHeight="210.0" prefWidth="285.0" style="-fx-background-color: #2F76FF; -fx-background-radius: 60;" text="Envoyer  toutes les Questions " textAlignment="CENTER" textFill="WHITE" wrapText="true">
+            <Button mnemonicParsing="false" prefHeight="210.0"  onAction="#envoieTous" prefWidth="285.0" style="-fx-background-color: #2F76FF; -fx-background-radius: 60;" text="Envoyer  toutes les Questions " textAlignment="CENTER" textFill="WHITE" wrapText="true">
                <font>
                   <Font size="28.0" />
                </font>
@@ -44,7 +44,7 @@
             </ImageView>
          </children>
       </Group>
-      <Group layoutX="870.0" layoutY="20.0">
+      <Group layoutX="870.0" layoutY="20.0" onMouseClicked="#aider">
          <children>
             <ImageView fitHeight="96.0" fitWidth="96.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -59,9 +59,9 @@
          </children>
       </Group>
       <Separator layoutX="629.0" layoutY="245.0" orientation="VERTICAL" prefHeight="210.0" prefWidth="85.0" />
-      <Group layoutX="700.0" layoutY="245.0">
+      <Group layoutX="700.0" layoutY="245.0" onMouseClicked="#envoieCategorie">
          <children>
-            <Button mnemonicParsing="false" prefHeight="210.0" prefWidth="285.0" style="-fx-background-color: #2F76FF; -fx-background-radius: 60;" text="Choisir les question par catégorie " textAlignment="CENTER" textFill="WHITE" wrapText="true">
+            <Button mnemonicParsing="false" onAction="#envoieCategorie" prefHeight="210.0" prefWidth="285.0" style="-fx-background-color: #2F76FF; -fx-background-radius: 60;" text="Choisir les question par catégorie " textAlignment="CENTER" textFill="WHITE" wrapText="true">
                <font>
                   <Font size="28.0" />
                </font>
@@ -74,9 +74,9 @@
          </children>
       </Group>
       <Separator layoutX="298.0" layoutY="243.0" orientation="VERTICAL" prefHeight="210.0" prefWidth="75.0" />
-      <Group layoutX="375.0" layoutY="245.0">
+      <Group layoutX="375.0" layoutY="245.0" onMouseClicked="#envoieQuestion">
          <children>
-            <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="210.0" prefWidth="270.0" style="-fx-background-color: #2F76FF; -fx-background-radius: 60;" text="Sélectionné les question a l'unité" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+            <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#envoieQuestion" prefHeight="210.0" prefWidth="270.0" style="-fx-background-color: #2F76FF; -fx-background-radius: 60;" text="Sélectionné les question a l'unité" textAlignment="CENTER" textFill="WHITE" wrapText="true">
                <font>
                   <Font size="28.0" />
                </font>
