--- a/wkQuiz/ihm-quizz/src/application/vue/ModeEnLigne.fxml
+++ b/wkQuiz/ihm-quizz/src/application/vue/ModeEnLigne.fxml
@@ -9,14 +9,14 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" style="-fx-background-color: #282C34;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" style="-fx-background-color: #282C34;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controleurs.reseau.ControleurModeEnLigne">
    <children>
       <Text fill="WHITE" layoutX="370.0" layoutY="74.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Mode En-ligne" textAlignment="CENTER">
          <font>
             <Font size="40.0" />
          </font>
       </Text>
-      <Button layoutX="320.0" layoutY="351.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="360.0" style="-fx-background-color: #2F76FF; -fx-background-radius: 60px;" styleClass="cavajamaismarcher" stylesheets="@css/mainStyle.css" text="Recevoir des Questions" textAlignment="CENTER" textFill="WHITE">
+      <Button layoutX="320.0" layoutY="351.0" mnemonicParsing="false" onAction="#recevoir" prefHeight="80.0" prefWidth="360.0" style="-fx-background-color: #2F76FF; -fx-background-radius: 60px;" styleClass="cavajamaismarcher" stylesheets="@css/mainStyle.css" text="Recevoir des Questions" textAlignment="CENTER" textFill="WHITE">
          <font>
             <Font size="24.0" />
          </font>
@@ -28,7 +28,7 @@
             </ImageView>
          </graphic>
       </Button>
-      <Button layoutX="320.0" layoutY="198.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="360.0" style="-fx-background-color: #2F76FF; -fx-background-radius: 60px;" styleClass="cavajamaismarcher" stylesheets="@css/mainStyle.css" text="Envoyer des Questions" textAlignment="CENTER" textFill="WHITE">
+      <Button layoutX="320.0" layoutY="198.0" mnemonicParsing="false" onAction="#envoyer" prefHeight="80.0" prefWidth="360.0" style="-fx-background-color: #2F76FF; -fx-background-radius: 60px;" styleClass="cavajamaismarcher" stylesheets="@css/mainStyle.css" text="Envoyer des Questions" textAlignment="CENTER" textFill="WHITE">
          <font>
             <Font size="24.0" />
          </font>
@@ -40,7 +40,7 @@
             </ImageView>
          </graphic>
       </Button>
-      <Group layoutX="42.0" layoutY="30.0">
+      <Group layoutX="42.0" layoutY="30.0" onMouseClicked="#retour">
          <children>
             <Label layoutX="-1.0" layoutY="74.0" text="Retour" textFill="WHITE">
                <font>
