--- a/wkQuiz/ihm-quizz/src/application/vue/RecevoirQuestions.fxml
+++ b/wkQuiz/ihm-quizz/src/application/vue/RecevoirQuestions.fxml
@@ -14,14 +14,14 @@
    <children>
       <Group layoutX="50.0" layoutY="20.0" onMouseClicked="#retour">
          <children>
-            <Label layoutX="-1.0" layoutY="74.0" text="Retour" textFill="WHITE">
+            <Label layoutX="-1.0" layoutY="82.0" text="Retour" textFill="WHITE">
                <font>
                   <Font size="32.0" />
                </font>
             </Label>
             <ImageView fitHeight="96.0" fitWidth="96.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@images/IconeAcceuil.png" />
+                  <Image url="@images/IconeRetour.png" />
                </image>
             </ImageView>
          </children>
