--- a/wkQuiz/ihm-quizz/src/application/vue/Recapitulatif.fxml
+++ b/wkQuiz/ihm-quizz/src/application/vue/Recapitulatif.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.Group?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -10,7 +11,7 @@
 <?import javafx.scene.text.Font?>
 
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" style="-fx-background-color: #282C34;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1000.0" style="-fx-background-color: #282C34;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Group layoutX="40.0" layoutY="20.0">
          <children>
@@ -31,7 +32,7 @@
             <Font size="32.0" />
          </font>
       </Label>
-      <TableView layoutX="10.0" layoutY="239.0" prefHeight="340.0" prefWidth="980.0">
+      <TableView layoutX="10.0" layoutY="175.0" prefHeight="392.0" prefWidth="980.0">
          <columns>
             <TableColumn prefWidth="220.0" text="Libéllé Question " />
             <TableColumn prefWidth="220.0" text="Catégorie" />
@@ -40,5 +41,10 @@
             <TableColumn prefWidth="220.0" text="Réponse fausse " />
          </columns>
       </TableView>
+      <Button layoutX="365.0" layoutY="604.0" mnemonicParsing="false" prefHeight="62.0" prefWidth="276.0" style="-fx-background-color: #2F76FF; -fx-background-radius: 60;" text="Valider" textFill="WHITE">
+         <font>
+            <Font size="32.0" />
+         </font>
+      </Button>
    </children>
 </Pane>
