--- a/wkQuiz/ihm-quizz/src/application/vue/ChoixQuestionExport.fxml
+++ b/wkQuiz/ihm-quizz/src/application/vue/ChoixQuestionExport.fxml
@@ -10,9 +10,9 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="665.0" prefWidth="1180.0" style="-fx-background-color: #282C34;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" >
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="665.0" prefWidth="1180.0" style="-fx-background-color: #282C34;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controleurs.reseau.ControleurSelectionQuestion">
    <children>
-      <Group layoutX="30.0" layoutY="20.0" >
+      <Group layoutX="30.0" layoutY="20.0" onMouseClicked="#retour">
          <children>
             <ImageView fitHeight="96.0" fitWidth="96.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -43,7 +43,7 @@
             <Font size="32.0" />
          </font>
       </Button>
-      <TableView layoutX="90.0" layoutY="286.0" prefHeight="350.0" prefWidth="1000.0">
+      <TableView layoutX="90.0" layoutY="286.0" prefHeight="350.0" prefWidth="1000.0" fx:id="tableView">
          <columns>
             <TableColumn fx:id="libelleQuestion" prefWidth="333.0" text="Libellé de la question" />
             <TableColumn fx:id="categorieQuestion" prefWidth="333.0" text="Catégorie de la question " />
