--- a/wkQuiz/ihm-quizz/src/application/vue/Recapitulatif.fxml
+++ b/wkQuiz/ihm-quizz/src/application/vue/Recapitulatif.fxml
@@ -10,9 +10,9 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1000.0" style="-fx-background-color: #282C34;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1000.0" style="-fx-background-color: #282C34;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controleurs.reseau.ControleurRecapitulatif">
    <children>
-      <Group layoutX="40.0" layoutY="20.0">
+      <Group layoutX="40.0" layoutY="20.0" onMouseClicked="#retour">
          <children>
             <ImageView fitHeight="96.0" fitWidth="96.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -40,7 +40,7 @@
             <TableColumn fx:id="repFausse" prefWidth="220.0" text="Réponse fausse " />
          </columns>
       </TableView>
-      <Button layoutX="365.0" layoutY="604.0" mnemonicParsing="false" prefHeight="62.0" prefWidth="276.0" style="-fx-background-color: #2F76FF; -fx-background-radius: 60;" text="Valider" textFill="WHITE">
+      <Button layoutX="365.0" layoutY="604.0" mnemonicParsing="false" onAction="#valider" prefHeight="62.0" prefWidth="276.0" style="-fx-background-color: #2F76FF; -fx-background-radius: 60;" text="Valider" textFill="WHITE">
          <font>
             <Font size="32.0" />
          </font>
