--- a/wkQuiz/ihm-quizz/src/application/vue/RepondreQuestion.fxml
+++ b/wkQuiz/ihm-quizz/src/application/vue/RepondreQuestion.fxml
@@ -21,7 +21,7 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="900.0" prefWidth="1400.0" style="-fx-background-color: #282C34;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controleurs.ControleurRepondreQuestion">
    <children>
-      <Group layoutX="32.0" layoutY="20.0">
+      <Group onMouseClicked="#quitterQuiz" layoutX="32.0" layoutY="20.0">
          <children>
             <ImageView fitHeight="96.0" fitWidth="96.0" pickOnBounds="true" preserveRatio="true">
                <image>
